@@ -1,5 +1,10 @@
 # $Id$
 
+2006-12-29	Konstantin V. Arkhipov
+
+	* main/DAOs/StorableDAO.class.php: correct support for OneToMany
+	relations implemented in property's path digging.
+
 2006-12-27	Konstantin V. Arkhipov
 
 	* core/Form/PlainForm.class.php, core/Form/Primitives/: clean()
